# Crzgames_RC2DCore_refacto_renderer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  dependencies.txt  docker-compose.yml
.github/workflows/: build_deploy_production.yml  test_deploy-release.yml
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/crzgames/testexe/: MyGame.java
android-project/app/src/main/java/org/libsdl/app/: SDLActivity.java
arevoir/: RC2D_filesystem.c  RC2D_mouse.c
build-scripts/: ios-iphoneos-arm64.sh  ios.sh  macos-arm64.sh  steamlinux-arm64.sh  steamlinux_steamdeck-x64.sh
build-scripts/build-deploy-mobile/: android.sh  ios.sh
build-scripts/build-run-mobile/: ios.sh
build-scripts/generate-icons/: generate-icons.sh
build-scripts/generate-project/: android.sh  linux-arm64.sh  linux-x64.sh  macos-arm64.sh  windows-arm64.bat  windows-x64.bat
build-scripts/run-mobile/: android.sh
docs/: README.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/src/: index.md
docs/src/api/: rc2d_audio.md  rc2d_collision.md  rc2d_event.md  rc2d_filesystem.md
examples/assets/shaders/compiled/dxil/: water.fragment.dxil
examples/assets/shaders/compiled/msl/: water.fragment.msl
examples/assets/shaders/compiled/pssl/: water.fragment.hlsl
examples/assets/shaders/compiled/spirv/: water.fragment.spv
examples/assets/shaders/reflection/: water.fragment.json
examples/assets/shaders/src/: water.fragment.hlsl
examples/include/mygame/: game.h  game_path.h  map.h  version.h
examples/shaders/compiled/dxil/: SpriteBatch.comp.dxil  rectangle.fragment.dxil  rectangle.vertex.dxil  test.fragment.dxil  test.fragment.metallib  test.vertex.dxil  water.fragment.dxil
examples/shaders/compiled/metallib/ios/: test.fragment.metallib  test.vertex.metallib
examples/shaders/compiled/metallib/macos/: test.fragment.metallib  test.vertex.metallib
examples/shaders/compiled/msl/: SpriteBatch.comp.msl  test.fragment.msl  test.vertex.msl  water.fragment.msl
examples/shaders/compiled/pssl/: test.compute.hlsl  test.fragment.hlsl  test.vertex.hlsl  water.fragment.hlsl
examples/shaders/compiled/spirv/: SpriteBatch.comp.spv  rectangle.fragment.spv  rectangle.vertex.spv  test.fragment.spv  water.fragment.spv
examples/shaders/reflection/: test.compute.json  test.fragment.json
examples/shaders/src/: test.compute.hlsl  test.fragment.hlsl  test.vertex.hlsl  water.fragment.hlsl
examples/src/: game.c  game.cpp  game_path.c  game_path.cpp  main.c  main.cpp  map.cpp
icons/macos/: app-icon.icns
include/RC2D/: RC2D.h  RC2D_assert.h  RC2D_audio.h  RC2D_camera.h  RC2D_collision.h  RC2D_config.h  RC2D_data.h  RC2D_engine.h  RC2D_event.h  RC2D_filedialog.h  RC2D_filesystem.h  RC2D_gpu.h  RC2D_graphics.h  RC2D_guid.h  RC2D_internal.h  RC2D_keyboard.h  RC2D_keycode.h  RC2D_local.h  RC2D_logger.h  RC2D_math.h  RC2D_memory.h  RC2D_messagebox.h  RC2D_mouse.h  RC2D_net.h  RC2D_onnx.h  RC2D_pixels.h  RC2D_platform.h  RC2D_platform_defines.h  RC2D_power.h  RC2D_rres.h  RC2D_scancode.h  RC2D_storage.h  RC2D_system.h  RC2D_text.h  RC2D_texturepacker.h  RC2D_thread.h  RC2D_time.h  RC2D_timer.h  RC2D_touch.h  RC2D_tweening.h  (+4 more)
src/RC2D/: RC2D_assert.c  RC2D_audio.c  RC2D_camera.c  RC2D_collision.c  RC2D_data.c  RC2D_engine.c  RC2D_entrypoint.c  RC2D_event.c  RC2D_filedialog.c  RC2D_filesystem.c  RC2D_gpu.c  RC2D_graphics.c  RC2D_guid.c  RC2D_keyboard.c  RC2D_letterbox.c  RC2D_local.c  RC2D_logger.c  RC2D_math.c  RC2D_memory.c  RC2D_messagebox.c  RC2D_mouse.c  RC2D_onnx.c  RC2D_platform.c  RC2D_power.c  RC2D_rres.c  RC2D_storage.c  RC2D_system.c  RC2D_text.c  RC2D_texturepacker.c  RC2D_thread.c  RC2D_time.c  RC2D_timer.c  RC2D_touch.c  RC2D_tweening.c  RC2D_ui.c  RC2D_video.c  RC2D_window.c
tests/src/: rc2d_collision.c
